# MonarchTakeHomeAssesment

./: .gitignore  .~lock.GL List.xlsx#  GL List.xlsx  Property List.xlsx  README.md  Readme.md  invoice_data.db  invoice_data.db-shm
Design/: Description.md  build-plan.md  design.md  design.txt
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: auth.py  classify.py  database.py  ingest.py  main.py  models.py  schema.sql  seed.py  table_models.py
backend/app/routers/: auth.py  gl.py  invoices.py  properties.py  summary.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: DataTable.tsx  ErrorBoundary.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: GLSpend.tsx  InvoiceExplorer.tsx  ItemsPerGL.tsx  ItemsPerProperty.tsx  Login.tsx  Mismatches.tsx
